# ChangeLog for x11-base/xorg-server
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-base/xorg-server/ChangeLog,v 1.732 2013/04/20 21:26:06 ago Exp $

  20 Apr 2013; Agostino Sarubbo <ago@gentoo.org> xorg-server-1.10.6-r2.ebuild,
  xorg-server-1.11.4-r2.ebuild, xorg-server-1.12.4-r1.ebuild,
  xorg-server-1.13.4.ebuild, xorg-server-1.9.5-r2.ebuild:
  Stable for amd64, wrt bug #466222

  17 Apr 2013; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  xorg-server-1.13.4.ebuild:
  Change postinstall message for xorg-server-1.13.4 too, bug #460844.

*xorg-server-1.10.6-r2 (17 Apr 2013)
*xorg-server-1.14.1 (17 Apr 2013)
*xorg-server-1.13.4 (17 Apr 2013)
*xorg-server-1.11.4-r2 (17 Apr 2013)
*xorg-server-1.9.5-r2 (17 Apr 2013)
*xorg-server-1.12.4-r1 (17 Apr 2013)

  17 Apr 2013; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  +files/xorg-server-1.12-cve-2013-1940.patch,
  +files/xorg-server-1.9-cve-2013-1940.patch, +xorg-server-1.10.6-r2.ebuild,
  +xorg-server-1.11.4-r2.ebuild, +xorg-server-1.12.4-r1.ebuild,
  +xorg-server-1.13.4.ebuild, +xorg-server-1.14.1.ebuild,
  +xorg-server-1.9.5-r2.ebuild:
  Bump/patch for security bug #466222.

*xorg-server-1.13.3 (08 Mar 2013)

  08 Mar 2013; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  +xorg-server-1.13.3.ebuild, -xorg-server-1.13.2.902.ebuild:
  Version bump.

  08 Mar 2013; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  xorg-server-1.14.0.ebuild:
  Force eautoreconf run.

*xorg-server-1.14.0 (08 Mar 2013)

  08 Mar 2013; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  +xorg-server-1.14.0.ebuild, -xorg-server-1.13.99.902.ebuild:
  Version bump.

*xorg-server-1.13.2.902 (04 Mar 2013)

  04 Mar 2013; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  +xorg-server-1.13.2.902.ebuild, -xorg-server-1.13.2.901.ebuild:
  Version bump.

  27 Feb 2013; Zac Medico <zmedico@gentoo.org> xorg-server-1.13.2.901.ebuild,